--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "name": "web-api-auth-examples",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
+  "scripts": {
+    "start": "nodemon ./client/authorization_code/app.js"
+  },
   "dependencies": {
     "bower": "^1.8.0",
     "cookie-parser": "1.3.2",
+    "es6-promise": "^4.0.5",
     "express": "~4.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "nodemon": "^1.11.0",
     "querystring": "~0.2.0",
     "request": "~2.34.0"
   }
